<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Track Me</string>
    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="word_is">The word is…</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>

<!--    get location app    -->
    <string name="device_name">Device Name</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="alt">altitude</string>
    <string name="get_your_location">get your location</string>
    <string name="last_update_at">Last update at:</string>
    <string name="request_verification">Request verification</string>
    <string name="one_minute">one minute</string>
    <string name="three_minutes">three minutes</string>
    <string name="five_minutes">five minutes</string>
    <string name="seven_minutes">seven minutes</string>
    <string name="update_interval">Update Interval</string>
    <string name="update_now">Update Now</string>
    <string name="code_1">code 1</string>
    <string name="code_2">code 2</string>
    <string name="code_3">code 3</string>
    <string name="code_4">code 4</string>
    <string name="location_icon">Location icon</string>
    <string name="elevation_icon">Elevation icon</string>
    <string name="background">background</string>
    <string name="error_message">Send request again after 1 min</string>
    <string name="error_try_again">Error, Try again!</string>
    <string name="permission_denied">Unable to update location without permission</string>
    <string name="required_permission_message">Permission denied, please give me location permission.</string>
    <string name="gps_off_message">Please turn on GPS!</string>

</resources>
