<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.track_me.screens.location.LocationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.location.LocationFragment">

        <TextView
            android:id="@+id/user_device_name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/franklin_gothic_heavy_regular"
            android:text="@string/device_name"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />

        <TextView
            android:id="@+id/last_update_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/last_update_at"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/user_device_name_TextView"
            app:layout_constraintStart_toStartOf="@id/user_device_name_TextView"
            app:layout_constraintTop_toBottomOf="@id/user_device_name_TextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="58dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/data_section"
            android:paddingStart="24dp"
            android:paddingTop="21dp"
            android:paddingEnd="18dp"
            android:paddingBottom="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_update_TextView">

            <ImageView
                android:id="@+id/location_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <TextView
                android:id="@+id/latitude_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/lat"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/location_imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/longitude_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/lng"
                android:textColor="@color/black"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/location_imageView"
                app:layout_constraintTop_toBottomOf="@id/latitude_TextView"
                app:layout_constraintVertical_bias="0.111" />


            <ImageView
                android:id="@+id/elevation_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/elevation_icon"
                android:src="@drawable/ic_travel_filled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_imageView"
                app:layout_constraintVertical_bias="1" />

            <TextView
                android:id="@+id/elevation_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/alt"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/elevation_imageView"
                app:layout_constraintTop_toBottomOf="@id/longitude_TextView"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/inner_timer_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/update_now_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inner_ConstraintLayout"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/one_ImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/option_selected_shadow"
                android:contentDescription="@string/one_minute"
                android:onClick="@{()->viewModel.setTimeSelected(1)}"
                android:padding="8dp"
                android:src="@drawable/one" />

            <ImageView
                android:id="@+id/three_ImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/three_minutes"
                android:onClick="@{()->viewModel.setTimeSelected(3)}"
                android:padding="8dp"
                android:src="@drawable/three" />

            <ImageView
                android:id="@+id/five_ImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/five_minutes"
                android:onClick="@{()->viewModel.setTimeSelected(5)}"
                android:padding="8dp"
                android:src="@drawable/five" />

            <ImageView
                android:id="@+id/seven_ImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/seven_minutes"
                android:onClick="@{()->viewModel.setTimeSelected(7)}"
                android:padding="8dp"
                android:src="@drawable/seven" />
        </LinearLayout>

        <TextView
            android:id="@+id/update_interval_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/verdana"
            android:text="@string/update_interval"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/update_now_Button"
            app:layout_constraintStart_toStartOf="@+id/update_now_Button"
            app:layout_constraintTop_toBottomOf="@id/inner_timer_LinearLayout"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/update_now_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="58dp"
            android:layout_marginBottom="48dp"
            android:padding="12dp"
            android:text="@string/update_now"
            android:textSize="18sp"
            android:enabled="@{!viewModel.waitingTime}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/error_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="@id/update_now_Button"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/update_now_Button"
            app:layout_constraintTop_toBottomOf="@id/update_now_Button"
            android:text="@string/error_try_again"
            android:visibility="@{viewModel.isSuccess()? View.GONE: View.VISIBLE}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>