<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.track_me.screens.verification.VerificationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verification_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:popUpToInclusive="true"
        tools:context=".screens.verification.VerificationFragment">

        <TextView
            android:id="@+id/device_name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/franklin_gothic_heavy_regular"
            android:text="@string/device_name"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="58dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/data_section"
            android:paddingStart="24dp"
            android:paddingTop="21dp"
            android:paddingEnd="18dp"
            android:paddingBottom="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_name_TextView">

            <ImageView
                android:id="@+id/location_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <TextView
                android:id="@+id/latitude_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/lat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/location_imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/longitude_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/lng"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/location_imageView"
                app:layout_constraintTop_toBottomOf="@id/latitude_TextView"
                app:layout_constraintVertical_bias="0.111" />


            <ImageView
                android:id="@+id/elevation_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/elevation_icon"
                android:src="@drawable/ic_travel_filled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_imageView"
                app:layout_constraintVertical_bias="1" />

            <TextView
                android:id="@+id/elevation_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/alt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/elevation_imageView"
                app:layout_constraintTop_toBottomOf="@id/longitude_TextView"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/inner_code_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/requestVerification_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inner_ConstraintLayout"
            app:layout_constraintVertical_bias="0.50">

            <ImageView
                android:id="@+id/code_one_ImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/code_1"
                android:padding="8dp"
                app:codeImage="@{viewModel.ranNumber[0]}"
                tools:src="@drawable/one" />

            <ImageView
                android:id="@+id/code_two_ImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/code_2"
                android:padding="8dp"
                app:codeImage="@{viewModel.ranNumber[1]}"
                tools:src="@drawable/three" />

            <ImageView
                android:id="@+id/code_three_ImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/code_3"
                android:padding="8dp"
                app:codeImage="@{viewModel.ranNumber[2]}"
                tools:src="@drawable/five" />

            <ImageView
                android:id="@+id/code_four_ImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/code_4"
                android:padding="8dp"
                app:codeImage="@{viewModel.ranNumber[3]}"
                tools:src="@drawable/seven" />
        </LinearLayout>

        <Button
            android:id="@+id/requestVerification_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="36dp"
            android:padding="12dp"
            android:text="@string/request_verification"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/error_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="@{viewModel.isSuccess() ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@id/requestVerification_Button"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/requestVerification_Button"
            app:layout_constraintTop_toBottomOf="@id/requestVerification_Button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
